--- a/app/src/main/res/layout/article_challenges_activity.xml
+++ b/app/src/main/res/layout/article_challenges_activity.xml
@@ -107,7 +107,6 @@
           android:layout_height="150dp"
           android:layout_margin="16dp"
           android:background="@color/background" />
-
         <ImageView
           android:layout_width="220dp"
           android:layout_height="150dp"
@@ -167,4 +166,223 @@
       app:fb_radius="4dp"
       app:fb_textFont="Roboto-Medium.ttf" />
   </RelativeLayout>
+
+
+  <RelativeLayout
+    android:id="@+id/coachMark"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/transparent_black_90"
+    android:elevation="4dp"
+    android:orientation="vertical"
+    android:visibility="gone">
+
+    <androidx.appcompat.widget.Toolbar
+      android:id="@+id/toolbarCoachMark"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:background="?attr/colorPrimary"
+      android:elevation="4dp"
+      android:minHeight="?attr/actionBarSize"
+      android:visibility="invisible"
+      app:theme="@style/ToolbarTheme"
+      app:titleTextAppearance="@style/ToolbarTheme.Title">
+
+      <RelativeLayout
+        android:id="@+id/toolbarRelativeLayoutCoachMark"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:visibility="invisible">
+
+        <com.mycity4kids.widget.CustomFontTextView
+          android:id="@+id/toolbarTitleCoachMark"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:layout_centerVertical="true"
+          android:drawableLeft="@drawable/back_arroow"
+          android:drawablePadding="@dimen/space_10"
+          android:drawableTint="@color/user_articles.toolbar.title"
+          android:text="@string/home_screen.suggested_topic.title"
+          android:textColor="@color/user_articles.toolbar.title"
+          android:textSize="20sp"
+          app:fontName="oswald_regular.ttf" />
+
+        <ImageView
+          android:id="@+id/searchAllImageViewCoachMark"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:layout_alignParentEnd="true"
+          android:layout_alignParentRight="true"
+          android:layout_centerVertical="true"
+          android:paddingStart="5dp"
+          android:paddingLeft="5dp"
+          android:paddingTop="5dp"
+          android:paddingEnd="10dp"
+          android:paddingRight="10dp"
+          android:paddingBottom="5dp"
+          android:src="@drawable/ic_search"
+          android:visibility="gone" />
+
+      </RelativeLayout>
+    </androidx.appcompat.widget.Toolbar>
+    <RelativeLayout
+      android:id="@+id/challengeHeaderViewCoachMark"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_below="@id/toolbarCoachMark">
+      <com.mycity4kids.widget.CustomFontTextView
+        android:id="@+id/challengesTextViewCoachMark"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/space_10"
+        android:paddingStart="@dimen/space_15"
+        android:paddingEnd="@dimen/space_15"
+        android:text="@string/video_challenge_text"
+        android:textColor="@color/app_red"
+        android:textSize="18sp"
+        android:visibility="invisible"
+        app:fontName="Roboto-Medium.ttf" />
+
+      <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/articleChallengesRecyclerViewCoachMark"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/challengesTextViewCoachMark"
+        android:layout_marginTop="13dp"
+        android:background="@color/white_color"
+        android:paddingStart="@dimen/space_15"
+        android:paddingEnd="@dimen/space_15"
+        android:visibility="invisible" />
+
+      <androidx.cardview.widget.CardView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/challengesTextViewCoachMark"
+        android:layout_marginStart="19dp"
+        android:layout_marginTop="17dp"
+        android:layout_marginEnd="15dp"
+        android:elevation="0dp"
+        app:cardCornerRadius="6dp"
+        app:cardElevation="0dp">
+        <androidx.appcompat.widget.AppCompatImageView
+          android:id="@+id/tagImageViewCoachMark"
+          android:layout_width="246dp"
+          android:layout_height="180dp"
+          android:adjustViewBounds="true"
+          android:background="@color/transparent_black_90"
+          android:scaleType="fitXY"
+          android:visibility="visible" />
+      </androidx.cardview.widget.CardView>
+
+    </RelativeLayout>
+    <com.mycity4kids.widget.CustomFontTextView
+      android:id="@+id/suggestedTopicsTextViewCoachMark"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:layout_below="@id/challengeHeaderViewCoachMark"
+      android:layout_marginTop="@dimen/space_20"
+      android:layout_marginBottom="@dimen/space_20"
+      android:paddingStart="@dimen/space_15"
+      android:paddingEnd="@dimen/space_15"
+      android:text="@string/home_screen.suggested_topic.title"
+      android:textColor="@color/app_red"
+      android:textSize="18sp"
+      android:visibility="invisible"
+      app:fontName="Roboto-Medium.ttf" />
+
+    <androidx.recyclerview.widget.RecyclerView
+      android:id="@+id/suggestedTopicsRecyclerViewCoachMark"
+      android:layout_width="match_parent"
+      android:layout_height="match_parent"
+      android:layout_above="@+id/bottomLayoutCoachMark"
+      android:layout_below="@+id/suggestedTopicsTextViewCoachMark"
+      android:background="@color/white_color"
+      android:paddingStart="10dp"
+      android:paddingEnd="10dp"
+      android:visibility="invisible" />
+
+    <RelativeLayout
+      android:id="@+id/bottomLayoutCoachMark"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:layout_alignParentBottom="true"
+      android:background="#F8F2F3"
+      android:visibility="invisible">
+
+
+      <com.mycity4kids.widget.MomspressoButtonWidget
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/space_10"
+        android:layout_marginTop="@dimen/space_10"
+        android:layout_marginEnd="@dimen/space_10"
+        android:layout_marginBottom="@dimen/space_5"
+        android:background="@color/app_red"
+        android:paddingTop="@dimen/space_16"
+        android:paddingBottom="@dimen/space_16"
+        android:text="@string/start_writing"
+        android:textAllCaps="true"
+        android:textSize="18sp"
+        app:fb_defaultColor="@color/app_red"
+        app:fb_iconResource="@drawable/ic_start_writting"
+        app:fb_radius="4dp"
+        app:fb_textFont="Roboto-Medium.ttf" />
+    </RelativeLayout>
+
+    <androidx.cardview.widget.CardView
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:layout_alignParentBottom="true"
+      android:layout_margin="16dp"
+      app:cardCornerRadius="4dp">
+      <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/tooltip_shape_layout">
+
+        <com.mycity4kids.widget.CustomFontTextView
+          android:id="@+id/headerText"
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:padding="10dp"
+          android:gravity="center_vertical"
+          android:text="Let us help you create your first blog! Select a challenge to start with or simply click on start writing"
+          android:textColor="@color/campaign_515151"
+          android:textSize="16sp"
+          app:fontName="Roboto-Medium.ttf"
+          app:layout_constraintStart_toStartOf="parent"
+          app:layout_constraintTop_toTopOf="parent" />
+
+        <com.mycity4kids.widget.CustomFontTextView
+          android:id="@+id/secondTextView"
+          android:layout_width="0dp"
+          android:layout_height="wrap_content"
+          android:padding="10dp"
+          android:text="Skip the tour"
+          android:textColor="@color/campaign_515151"
+          android:textSize="14sp"
+          app:fontName="Roboto-Regular.ttf"
+          app:layout_constraintEnd_toStartOf="@+id/okgot"
+          app:layout_constraintStart_toStartOf="parent"
+          app:layout_constraintTop_toBottomOf="@id/headerText" />
+
+        <com.mycity4kids.widget.CustomFontTextView
+          android:id="@+id/okgot"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:padding="15dp"
+          android:text="Ok, Got it"
+          android:textColor="@color/app_red"
+          android:textSize="16sp"
+          app:fontName="Roboto-Medium.ttf"
+          app:layout_constraintBottom_toBottomOf="@id/secondTextView"
+          app:layout_constraintEnd_toEndOf="parent"
+          app:layout_constraintStart_toEndOf="@id/secondTextView" />
+
+      </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.cardview.widget.CardView>
+
+
+  </RelativeLayout>
+
 </RelativeLayout>
