--- a/app/src/main/res/layout/horizontal_recycler_view_video_challenge.xml
+++ b/app/src/main/res/layout/horizontal_recycler_view_video_challenge.xml
@@ -3,8 +3,10 @@
   xmlns:app="http://schemas.android.com/apk/res-auto"
   android:layout_width="wrap_content"
   android:layout_height="wrap_content"
-  android:layout_marginEnd="12dp"
-  android:layout_marginBottom="10dp"
+  android:layout_marginEnd="16dp"
+  android:layout_marginBottom="14dp"
+  android:layout_marginStart="@dimen/space_4"
+  android:layout_marginTop="@dimen/space_4"
   android:elevation="0dp"
   app:cardCornerRadius="4dp"
   app:cardElevation="0dp">
@@ -12,7 +14,8 @@
   <RelativeLayout
     android:id="@+id/topicContainer"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+ >
 
     <ImageView
       android:id="@+id/tagImageView"
