--- a/app/src/main/res/layout/layout_story_share_card.xml
+++ b/app/src/main/res/layout/layout_story_share_card.xml
@@ -1,53 +1,89 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/shareCardView"
+  xmlns:app="http://schemas.android.com/apk/res-auto"
+  android:id="@+id/shareCardView"
+  android:layout_width="match_parent"
+  android:layout_height="wrap_content"
+  android:background="@color/transparent"
+  android:clipChildren="true"
+  android:elevation="4dp"
+  app:cardCornerRadius="4dp">
+
+  <androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="@color/transparent"
-    android:clipChildren="true"
-    android:elevation="4dp"
-    app:cardCornerRadius="4dp">
+    android:layout_height="wrap_content">
+
+    <androidx.appcompat.widget.AppCompatImageView
+      android:id="@+id/storyImageView"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:adjustViewBounds="true"
+      app:layout_constraintTop_toTopOf="parent"
+      app:srcCompat="@drawable/default_article" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+      android:id="@+id/storyIsLiveContainer"
+      android:layout_width="0dp"
+      android:layout_height="wrap_content"
+      android:layout_centerHorizontal="true"
+      android:layout_marginBottom="@dimen/space_12"
+      app:layout_constraintBottom_toBottomOf="@id/storyImageView"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintStart_toStartOf="parent">
 
-        <androidx.appcompat.widget.AppCompatImageView
-            android:id="@+id/storyImageView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:adjustViewBounds="true"
-            app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/default_article" />
+      <com.mycity4kids.widget.CustomFontTextView
+        android:id="@+id/secondTextView"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/space_12"
+        android:layout_marginTop="12dp"
+        android:layout_marginEnd="@dimen/space_12"
+        android:background="@drawable/tooltip_shape_layout"
+        android:padding="@dimen/space_16"
+        android:textColor="@color/campaign_515151"
+        android:textSize="14sp"
+        app:fontName="Roboto-Regular.ttf"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-        <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/storyAuthorTextView"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:layout_toStartOf="@+id/logoImageView"
-            android:ellipsize="marquee"
-            android:paddingTop="10dp"
-            android:paddingBottom="10dp"
-            android:singleLine="true"
-            android:textColor="@color/short_story_author_name"
-            android:textSize="16sp"
-            android:textStyle="bold"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@id/logoImageView"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/storyImageView" />
+      <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/cancelImage"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/ic_cross" />
 
-        <androidx.appcompat.widget.AppCompatImageView
-            android:id="@+id/logoImageView"
-            android:layout_width="120dp"
-            android:layout_height="20dp"
-            android:layout_alignParentEnd="true"
-            android:layout_margin="10dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/storyImageView"
-            app:srcCompat="@drawable/app_logo" />
     </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <androidx.appcompat.widget.AppCompatTextView
+      android:id="@+id/storyAuthorTextView"
+      android:layout_width="0dp"
+      android:layout_height="wrap_content"
+      android:layout_marginStart="10dp"
+      android:layout_toStartOf="@+id/logoImageView"
+      android:ellipsize="marquee"
+      android:paddingTop="10dp"
+      android:paddingBottom="10dp"
+      android:singleLine="true"
+      android:textColor="@color/short_story_author_name"
+      android:textSize="16sp"
+      android:textStyle="bold"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintEnd_toStartOf="@id/logoImageView"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toBottomOf="@+id/storyImageView" />
+
+    <androidx.appcompat.widget.AppCompatImageView
+      android:id="@+id/logoImageView"
+      android:layout_width="120dp"
+      android:layout_height="20dp"
+      android:layout_alignParentEnd="true"
+      android:layout_margin="10dp"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintTop_toBottomOf="@+id/storyImageView"
+      app:srcCompat="@drawable/app_logo" />
+  </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
