--- a/app/src/main/res/layout/video_category_challenge_selection_activity.xml
+++ b/app/src/main/res/layout/video_category_challenge_selection_activity.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto"
   android:id="@+id/rootLayout"
   android:layout_width="match_parent"
@@ -45,8 +45,10 @@
     </RelativeLayout>
   </androidx.appcompat.widget.Toolbar>
   <FrameLayout
+    android:id="@+id/categoryHeaderLayout"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_below="@id/toolbar">
     <androidx.recyclerview.widget.RecyclerView
       android:id="@+id/categoriesRecyclerView"
       android:layout_width="match_parent"
@@ -92,7 +94,8 @@
 
   <FrameLayout
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_below="@+id/categoryHeaderLayout">
 
     <androidx.recyclerview.widget.RecyclerView
       android:id="@+id/challengesRecyclerView"
@@ -205,4 +208,200 @@
       </com.facebook.shimmer.ShimmerFrameLayout>
     </LinearLayout>
   </FrameLayout>
-</LinearLayout>
+  <View
+    android:id="@+id/transViewCoachMark"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/transparent_black_90"
+    android:clickable="true"
+    android:focusable="true"
+    android:visibility="gone" />
+  <FrameLayout
+    android:id="@+id/coachMark"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_below="@+id/categoryHeaderLayout"
+    android:background="@color/transparent"
+    android:clickable="true"
+    android:focusable="true"
+    android:visibility="gone">
+
+    <androidx.recyclerview.widget.RecyclerView
+      android:id="@+id/challengesRecyclerViewCoachMark"
+      android:layout_width="match_parent"
+      android:layout_height="match_parent"
+      android:visibility="gone" />
+    <LinearLayout
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:orientation="vertical"
+      android:visibility="invisible">
+
+      <com.facebook.shimmer.ShimmerFrameLayout
+        android:id="@+id/challengesShimmerLayout1CoachMark"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:animateLayoutChanges="true"
+        android:visibility="visible">
+
+        <LinearLayout
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:orientation="horizontal"
+          android:visibility="visible">
+
+          <ImageView
+            android:layout_width="220dp"
+            android:layout_height="150dp"
+            android:layout_margin="16dp"
+            android:background="@color/background" />
+
+          <ImageView
+            android:layout_width="220dp"
+            android:layout_height="150dp"
+            android:layout_margin="16dp"
+            android:background="@color/background" />
+
+          <ImageView
+            android:layout_width="220dp"
+            android:layout_height="150dp"
+            android:layout_margin="16dp"
+            android:background="@color/background" />
+        </LinearLayout>
+      </com.facebook.shimmer.ShimmerFrameLayout>
+
+      <com.facebook.shimmer.ShimmerFrameLayout
+        android:id="@+id/challengesShimmerLayout2CoachMark"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:animateLayoutChanges="true"
+        android:visibility="visible">
+
+        <LinearLayout
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:orientation="horizontal"
+          android:visibility="visible">
+
+          <ImageView
+            android:layout_width="220dp"
+            android:layout_height="150dp"
+            android:layout_margin="16dp"
+            android:background="@color/background" />
+
+          <ImageView
+            android:layout_width="220dp"
+            android:layout_height="150dp"
+            android:layout_margin="16dp"
+            android:background="@color/background" />
+
+          <ImageView
+            android:layout_width="220dp"
+            android:layout_height="150dp"
+            android:layout_margin="16dp"
+            android:background="@color/background" />
+        </LinearLayout>
+      </com.facebook.shimmer.ShimmerFrameLayout>
+
+      <com.facebook.shimmer.ShimmerFrameLayout
+        android:id="@+id/challengesShimmerLayout3CoachMark"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:animateLayoutChanges="true"
+        android:visibility="visible">
+
+        <LinearLayout
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:orientation="horizontal"
+          android:visibility="visible">
+
+          <ImageView
+            android:layout_width="220dp"
+            android:layout_height="150dp"
+            android:layout_margin="16dp"
+            android:background="@color/background" />
+
+          <ImageView
+            android:layout_width="220dp"
+            android:layout_height="150dp"
+            android:layout_margin="16dp"
+            android:background="@color/background" />
+
+          <ImageView
+            android:layout_width="220dp"
+            android:layout_height="150dp"
+            android:layout_margin="16dp"
+            android:background="@color/background" />
+        </LinearLayout>
+      </com.facebook.shimmer.ShimmerFrameLayout>
+    </LinearLayout>
+
+    <RelativeLayout
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content">
+      <com.mycity4kids.widget.CustomFontTextView
+        android:id="@+id/categoryTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:elevation="@dimen/space_5"
+        android:paddingStart="16dp"
+        android:paddingTop="10dp"
+        android:paddingEnd="16dp"
+        android:text="@string/all_live_challenges"
+        android:textSize="20sp"
+        android:visibility="invisible" />
+      <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/categoryTextView"
+        android:layout_marginStart="@dimen/space_20"
+        android:layout_marginTop="@dimen/space_20"
+        android:layout_marginEnd="@dimen/space_16"
+        android:layout_marginBottom="@dimen/space_16"
+        android:background="@color/transparent">
+
+        <androidx.cardview.widget.CardView
+          android:id="@+id/tagImageViewCoachMarkCard"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:elevation="@dimen/space_4"
+          app:cardCornerRadius="@dimen/space_5"
+          app:cardElevation="@dimen/space_5">
+          <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/tagImageViewCoachMark"
+            android:layout_width="246dp"
+            android:layout_height="180dp"
+            android:adjustViewBounds="true"
+            android:scaleType="centerCrop"
+            android:src="@drawable/default_article" />
+        </androidx.cardview.widget.CardView>
+
+
+        <com.mycity4kids.widget.CustomFontTextView
+          android:id="@+id/challengeNameText"
+          android:layout_width="246dp"
+          android:layout_height="wrap_content"
+          android:layout_alignBottom="@id/tagImageViewCoachMarkCard"
+          android:layout_marginBottom="10dp"
+          android:elevation="@dimen/space_10"
+          android:ellipsize="marquee"
+          android:paddingStart="@dimen/space_10"
+          android:paddingEnd="@dimen/space_10"
+          android:shadowColor="@color/black_color"
+          android:shadowDx="1"
+          android:shadowDy="1"
+          android:shadowRadius="2"
+          android:singleLine="true"
+          android:text=""
+          android:textColor="@color/white_color"
+          android:textSize="22sp"
+          app:fontName="oswald_regular.ttf" />
+      </RelativeLayout>
+    </RelativeLayout>
+  </FrameLayout>
+
+
+</RelativeLayout>
+
