--- a/app/src/main/res/layout/video_challenge_selection_vertical_item.xml
+++ b/app/src/main/res/layout/video_challenge_selection_vertical_item.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
   android:layout_width="match_parent"
   android:layout_height="wrap_content"
   android:orientation="vertical">
@@ -19,8 +19,11 @@
     android:id="@+id/challengeRecyclerView"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_below="@id/categoryTextView"
     android:paddingStart="16dp"
     android:paddingTop="16dp"
     android:paddingEnd="16dp" />
 
-</LinearLayout>
+
+
+</RelativeLayout>
