--- a/app/src/main/res/layout/drawer_layout.xml
+++ b/app/src/main/res/layout/drawer_layout.xml
@@ -196,21 +196,62 @@
       android:background="@color/app_nav_bg" />
 
     <com.mycity4kids.widget.CustomFontTextView
-      android:id="@+id/shareAppTextView"
+      android:id="@+id/bloggerGoldTextView"
       android:layout_width="match_parent"
       android:layout_height="60dp"
       android:layout_below="@+id/divider1"
-      android:drawableLeft="@drawable/ic_spread_the_word"
-      android:drawablePadding="25dp"
-      android:drawableTint="#d54058"
+      android:drawableStart="@drawable/ic_gift"
+      android:drawablePadding="20dp"
       android:gravity="center_vertical"
-      android:paddingLeft="30dp"
+      android:paddingStart="28dp"
       android:paddingTop="12dp"
-      android:paddingRight="16dp"
+      android:paddingEnd="16dp"
+      android:paddingBottom="12dp"
+      android:text="B'DAY BONANZA"
+      android:textAllCaps="true"
+      android:textSize="14sp"
+      app:drawableTint="#d54058"
+      app:fontName="oswald.ttf" />
+
+    <androidx.cardview.widget.CardView
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_below="@+id/divider1"
+      android:layout_alignParentEnd="true"
+      android:layout_marginTop="18dp"
+      android:layout_marginEnd="20dp"
+      app:cardCornerRadius="4dp"
+      app:cardPreventCornerOverlap="false">
+
+      <com.mycity4kids.widget.CustomFontTextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/rectangle_gradient_bg"
+        android:paddingStart="6dp"
+        android:paddingTop="2dp"
+        android:paddingEnd="6dp"
+        android:paddingBottom="2dp"
+        android:text="NEW"
+        android:textColor="@color/white_color"
+        android:textSize="13sp"
+        app:fontName="oswald_regular.ttf" />
+    </androidx.cardview.widget.CardView>
+    <com.mycity4kids.widget.CustomFontTextView
+      android:id="@+id/shareAppTextView"
+      android:layout_width="match_parent"
+      android:layout_height="60dp"
+      android:layout_below="@+id/bloggerGoldTextView"
+      android:drawableStart="@drawable/ic_spread_the_word"
+      android:drawablePadding="25dp"
+      android:gravity="center_vertical"
+      android:paddingStart="30dp"
+      android:paddingTop="12dp"
+      android:paddingEnd="16dp"
       android:paddingBottom="12dp"
       android:text="@string/share_app"
       android:textAllCaps="true"
       android:textSize="14sp"
+      app:drawableTint="#d54058"
       app:fontName="oswald.ttf" />
 
     <LinearLayout
