--- a/app/src/main/res/layout/home_create_bottom_sheet.xml
+++ b/app/src/main/res/layout/home_create_bottom_sheet.xml
@@ -16,32 +16,6 @@
     android:background="#121212"
     android:visibility="invisible" />
 
-  <ImageView
-    android:id="@+id/createTextImageVIew"
-    android:layout_width="140dp"
-    android:layout_height="100dp"
-    android:layout_above="@+id/createLabelTextView"
-    android:layout_centerHorizontal="true"
-    android:src="@drawable/create_icon"
-    android:visibility="invisible" />
-
-  <com.mycity4kids.widget.CustomFontTextView
-    android:id="@+id/createLabelTextView"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_above="@+id/actionItemContainer"
-    android:layout_marginLeft="20dp"
-    android:layout_marginRight="20dp"
-    android:layout_marginBottom="40dp"
-    android:gravity="center"
-    android:paddingLeft="40dp"
-    android:paddingRight="40dp"
-    android:text="@string/create_content"
-    android:textColor="@color/white_color"
-    android:textSize="18sp"
-    android:visibility="invisible"
-    app:fontName="oswald.ttf" />
-
   <LinearLayout
     android:id="@+id/actionItemContainer"
     android:layout_width="match_parent"
@@ -49,14 +23,23 @@
     android:layout_alignParentBottom="true"
     android:background="@color/white_color"
     android:orientation="vertical"
-    android:padding="10dp"
     android:visibility="invisible">
+
+    <ImageView
+      android:id="@+id/createTextImageView"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:adjustViewBounds="true"
+      android:src="@drawable/create_icon"
+      android:visibility="invisible" />
 
     <com.mycity4kids.widget.CustomFontTextView
       android:id="@+id/continueWritingLabelTV"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
-      android:layout_marginBottom="10dp"
+      android:layout_marginStart="10dp"
+      android:layout_marginTop="10dp"
+      android:layout_marginEnd="10dp"
       android:paddingStart="20dp"
       android:text="@string/continue_writing"
       android:textColor="#947373"
@@ -67,6 +50,8 @@
       android:id="@+id/draftsShimmerLayout"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
+      android:layout_marginStart="10dp"
+      android:layout_marginEnd="10dp"
       app:duration="800">
 
       <LinearLayout
@@ -85,11 +70,15 @@
     <androidx.recyclerview.widget.RecyclerView
       android:id="@+id/draftsRecyclerView"
       android:layout_width="match_parent"
-      android:layout_height="wrap_content" />
+      android:layout_height="wrap_content"
+      android:layout_marginStart="10dp"
+      android:layout_marginEnd="10dp" />
 
     <com.mycity4kids.widget.CustomFontTextView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
+      android:layout_marginStart="10dp"
+      android:layout_marginEnd="10dp"
       android:paddingLeft="20dp"
       android:paddingTop="10dp"
       android:paddingRight="20dp"
@@ -102,6 +91,8 @@
     <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
+      android:layout_marginStart="10dp"
+      android:layout_marginEnd="10dp"
       android:orientation="horizontal"
       android:weightSum="3">
 
