--- a/app/src/main/res/layout/login_activity.xml
+++ b/app/src/main/res/layout/login_activity.xml
@@ -25,7 +25,7 @@
     android:layout_below="@+id/toolbar"
     android:layout_centerHorizontal="true"
     android:layout_marginTop="20dp"
-    android:text="Login or Sign up"
+    android:text="@string/login_or_sign_up"
     android:textColor="@color/app_dark_black"
     android:textSize="20sp"
     android:textStyle="bold" />
@@ -40,7 +40,7 @@
     android:gravity="center"
     android:paddingStart="40dp"
     android:paddingEnd="40dp"
-    android:text="Create, Read, Earn and Reach out to 32 Million mums"
+    android:text="@string/login_subheading"
     android:textColor="@color/app_light_black"
     android:textSize="16sp" />
 
