--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -592,4 +592,5 @@
   <color name="suggested_topic_border_5">#F6E9D5</color>
 
   <color name="color_9D9D9D">#9D9D9D</color>
+  <color name="color_FFF7F8">#FFF7F8</color>
 </resources>
